Update documentation and scripts for Quarkus and streamline E2E test configurations