@@ -7,6 +7,7 @@ A comprehensive Java project that demonstrates detailed JVM (Java Virtual Machin
 Show My JVM provides a sophisticated core library that extracts comprehensive JVM runtime information and exposes it through multiple web frameworks. The project demonstrates how the same core functionality can be deployed across different architectures, from traditional web servers to modern reactive frameworks, all with standardized endpoints and comprehensive end-to-end testing.
 
 **Key Features:**
+
 - 🔍 **Deep JVM Introspection** - Comprehensive runtime analysis including memory, threading, GC, and performance metrics
 - 🌐 **Multi-Framework Support** - 9 different web frameworks with standardized APIs
 - 🔄 **Standardized Endpoints** - Consistent `/jvm/inspect` and `/jvm/inspect.json` across all implementations
@@ -25,7 +26,7 @@ This is a sophisticated Maven multi-module project with the following structure:
 showmyjvm/
 ├── 📋 bom/                    # Bill of Materials (dependency management)
 ├── 🧠 core/                   # Core JVM introspection library
-├── 🌸 spring-boot/           # Spring Boot web application  
+├── 🌸 spring-boot/           # Spring Boot web application
 ├── ⚡ sparkjava/             # SparkJava lightweight web framework
 ├── 🔬 micronaut/             # Micronaut framework implementation
 ├── 🏃 quarkus/              # Quarkus native-ready framework
@@ -43,6 +44,7 @@ showmyjvm/
 The `core` module provides comprehensive JVM introspection capabilities using Java 25 features:
 
 ### 🎛️ JVM Information Extracted
+
 - **Runtime Properties**: VM name, version, vendor, PID, input arguments
 - **Memory Analysis**: Heap and non-heap memory usage, memory pools, GC pressure
 - **Class Loading**: Total loaded/unloaded classes, current loaded classes
@@ -53,37 +55,33 @@ The `core` module provides comprehensive JVM introspection capabilities using Ja
 - **JVM Flags**: Advanced flags extraction with origins and writability
 - **Environment**: Complete system properties and environment variables
 
-### 🔧 Key Classes
-- `ShowJVM`: Main orchestrator for JVM data collection and analysis
-- `JVMDetails`: Comprehensive data structure containing all JVM information
-- `PrintFlagsFinal`: Advanced JVM flags extraction (requires `--add-opens` for full access)
-- `IdentifyGC`: Sophisticated garbage collector type identification
-
 ## 🌐 Web Framework Implementations
 
 All framework modules provide **standardized endpoints** and run on **port 8080** (configurable via PORT environment variable):
 
-| Framework | Endpoints | Key Features |
-|-----------|-----------|--------------|
-| 🌸 **Spring Boot** | `/jvm/inspect`, `/jvm/inspect.json` | Actuator integration, Jackson pretty printing |
-| ⚡ **SparkJava** | `/jvm/inspect`, `/jvm/inspect.json` | Ultra-lightweight, minimal dependencies, fast startup |
-| 🔬 **Micronaut** | `/jvm/inspect`, `/jvm/inspect.json` | Compile-time DI, reflection-free, native-ready |
-| 🏃 **Quarkus** | `/jvm/inspect`, `/jvm/inspect.json` | Supersonic subatomic Java, Kubernetes-native, GraalVM support |
-| 📡 **Ratpack** | `/jvm/inspect`, `/jvm/inspect.json` | Reactive programming model, asynchronous non-blocking |
-| ☕ **Javalin** | `/jvm/inspect`, `/jvm/inspect.json` | Simple and lightweight, easy to use |
-| 🌊 **Helidon SE** | `/jvm/inspect`, `/jvm/inspect.json` | Reactive microservices framework |
-| 🌊 **Helidon MP** | `/jvm/inspect`, `/jvm/inspect.json` | MicroProfile implementation |
-| 🐱 **Tomcat** | `/jvm/inspect`, `/jvm/inspect.json` | Traditional servlet-based (Tomcat 11, Jakarta EE 11) |
+| Framework          | Key Features                                                  |
+| ------------------ | ------------------------------------------------------------- |
+| 🌸 **Spring Boot** | Actuator integration, Jackson pretty printing                 |
+| ⚡ **SparkJava**   | Ultra-lightweight, minimal dependencies, fast startup         |
+| 🔬 **Micronaut**   | Compile-time DI, reflection-free, native-ready                |
+| 🏃 **Quarkus**     | Supersonic subatomic Java, Kubernetes-native, GraalVM support |
+| 📡 **Ratpack**     | Reactive programming model, asynchronous non-blocking         |
+| ☕ **Javalin**     | Simple and lightweight, easy to use                           |
+| 🌊 **Helidon SE**  | Reactive microservices framework                              |
+| 🌊 **Helidon MP**  | MicroProfile implementation                                   |
+| 🐱 **Tomcat**      | Traditional servlet-based (Tomcat 11, Jakarta EE 11)          |
 
 ### Standard Endpoints
 
 All implementations support:
+
 - **`/jvm/inspect`** - Returns JVM details in plain text format (`text/plain`)
 - **`/jvm/inspect.json`** - Returns JVM details in JSON format (`application/json`)
 
 ### Port Configuration
 
 All implementations:
+
 - Default to **port 8080**
 - Support the **`PORT` environment variable** for dynamic configuration
 - Example: `PORT=9000 mvn spring-boot:run -pl spring-boot`
@@ -93,6 +91,7 @@ All implementations:
 The project includes a comprehensive **Playwright** test suite that validates all implementations:
 
 ### Test Coverage
+
 - ✅ Endpoint availability (both `/jvm/inspect` and `/jvm/inspect.json`)
 - ✅ Content-Type headers validation
 - ✅ Response format verification
@@ -107,17 +106,11 @@ cd e2e-tests
 npm install
 npx playwright install
 
-# Run all tests (requires implementations to be running)
+# Run all tests (requires a showmyjvm implementation to be running)
 npm test
-
-# Test a specific implementation
-npm run test:spring-boot
 
 # Run tests with UI
 npm run test:ui
-
-# Run all implementations and test them
-npm run test:all
 ```
 
 The `test-all.sh` script automatically starts each implementation, runs the tests, and stops the server.
@@ -125,6 +118,7 @@ The `test-all.sh` script automatically starts each implementation, runs the test
 ## 📁 Serverless Implementations (Deprecated)
 
 Serverless implementations have been moved to the `/serverless` directory and are no longer actively maintained:
+
 - Azure Functions (Java 21)
 - AWS Lambda
 
@@ -132,7 +126,7 @@ These implementations are preserved for reference but not included in the main b
 
 ## 🛠️ Prerequisites
 
-- **Java**: 25 - *Required for all modules*
+- **Java**: 25 - _Required for all modules_
 - **Maven**: 3.9.1 or higher (enforced by project)
 - **Node.js**: 18+ (for E2E tests)
 - **Operating System**: Any (macOS, Linux, Windows)
@@ -142,6 +136,7 @@ These implementations are preserved for reference but not included in the main b
 ## 🔨 Building the Project
 
 ### 📦 Build All Modules
+
 ```bash
 # Clean build of entire project
 ./mvnw clean compile
@@ -154,6 +149,7 @@ These implementations are preserved for reference but not included in the main b
 ```
 
 ### 🎯 Build Specific Module
+
 ```bash
 # Build Spring Boot module with dependencies
 ./mvnw clean compile -pl spring-boot -am
@@ -163,6 +159,7 @@ These implementations are preserved for reference but not included in the main b
 ```
 
 ### 📊 Generate Reports
+
 ```bash
 # Generate dependency update reports
 ./mvnw versions:display-dependency-updates
@@ -177,17 +174,17 @@ All implementations support the **PORT environment variable** for dynamic port c
 
 ### Quick Start Commands
 
-| Framework | Command |
-|-----------|---------|
+| Framework          | Command                               |
+| ------------------ | ------------------------------------- |
 | 🌸 **Spring Boot** | `mvn spring-boot:run -pl spring-boot` |
-| 🏃 **Quarkus** | `mvn quarkus:dev -pl quarkus` |
-| 🔬 **Micronaut** | `mvn mn:run -pl micronaut` |
-| 🌊 **Helidon SE** | `mvn exec:java -pl helidon` |
-| 🌊 **Helidon MP** | `mvn exec:java -pl helidon-mp` |
-| ☕ **Javalin** | `mvn exec:java -pl javalin` |
-| 📡 **Ratpack** | `mvn exec:java -pl ratpack` |
-| ⚡ **SparkJava** | `mvn exec:java -pl sparkjava` |
-| 🐱 **Tomcat** | `mvn cargo:run -pl tomcat` |
+| 🏃 **Quarkus**     | `mvn quarkus:run -pl quarkus`         |
+| 🔬 **Micronaut**   | `mvn mn:run -pl micronaut`            |
+| 🌊 **Helidon SE**  | `mvn exec:exec -pl helidon`           |
+| 🌊 **Helidon MP**  | `mvn exec:exec -pl helidon-mp`        |
+| ☕ **Javalin**     | `mvn exec:exec -pl javalin`           |
+| 📡 **Ratpack**     | `mvn exec:exec -pl ratpack`           |
+| ⚡ **SparkJava**   | `mvn exec:exec -pl sparkjava`         |
+| 🐱 **Tomcat**      | `mvn cargo:run -pl tomcat`            |
 
 ### With Custom Port
 
@@ -196,11 +193,11 @@ All implementations support the **PORT environment variable** for dynamic port c
 PORT=9000 mvn spring-boot:run -pl spring-boot
 
 # Run Tomcat on port 3000
-PORT=3000 mvn cargo:run -pl tomcat
+PORT=3000 mvn package cargo:run -pl tomcat
 ```
+
 ```bash
-./mvnw compile exec:java -pl ratpack -am \
-  -Dexec.mainClass="io.brunoborges.showmyjvm.ratpack.RatpackStart"
+PORT=9966 mvn package exec:exec -pl ratpack
 ```
 
 ## 🧪 Testing the Applications
@@ -211,7 +208,7 @@ Once any web application is running, test using the **standardized endpoints**:
 # Plain text output
 curl http://localhost:8080/jvm/inspect
 
-# JSON output  
+# JSON output
 curl http://localhost:8080/jvm/inspect.json | jq '.'
 
 # With custom port
@@ -229,13 +226,20 @@ mvn spring-boot:run -pl spring-boot
 cd e2e-tests
 npm install  # First time only
 npm test
+```
 
+To test all implementations automatically, ensure no other instances are running.
+Then, use the provided script:
+
+```bash
 # Test all implementations automatically
-npm run test:all
+./test-all.sh
 ```
 
 ### 📋 Sample Output Sections
+
 The JVM analysis includes comprehensive sections:
+
 - 🖥️ **Runtime Properties** (VM details, PID, launch arguments)
 - 🧮 **Memory Settings** (heap, non-heap, memory pools)
 - 📚 **Loaded Classes** (counts, compilation statistics)
@@ -254,7 +258,7 @@ All web framework modules include Jib configuration for containerization:
 mvn clean package -DskipTests
 
 # Build specific implementation
-mvn clean package jib:dockerBuild -pl spring-boot
+mvn clean package -pl spring-boot
 
 # Run containerized application with custom port
 docker run -p 9000:8080 -e PORT=8080 showmyjvm-spring-boot
@@ -271,40 +275,35 @@ docker run -p 9000:8080 -e PORT=8080 showmyjvm-spring-boot
 # - showmyjvm-tomcat
 ```
 
-## 🔒 Advanced JVM Flags Access
-
-For complete JVM flags information, run with additional module access:
-
-```bash
-# Enable full flag introspection
-mvn spring-boot:run -pl spring-boot \
-  -Dspring-boot.run.jvmArguments="--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"
-```
-
 ## ⭐ Key Features & Benefits
 
 ### 🏗️ **Standardized Multi-Framework Architecture**
+
 - Demonstrates identical core functionality across 9 modern web frameworks
 - **Standardized endpoints** (`/jvm/inspect` and `/jvm/inspect.json`) across all implementations
 - **Consistent PORT environment variable** support for dynamic configuration
 - Framework-specific optimizations and JSON handling
 
 ### 🧪 **Comprehensive Testing**
+
 - **Playwright E2E test suite** covering all 9 implementations
 - Automated testing with `test-all.sh` script
 - Validates endpoint availability, content types, and data consistency
 
 ### 🐳 **Container-Ready**
+
 - **Jib integration** for all implementations
 - Optimized Docker image builds without Docker daemon
 - Ready for Kubernetes, Azure Container Instances, and other container platforms
 
 ### 🔍 **Advanced JVM Analysis**
+
 - Deep runtime introspection using Java Management Extensions (JMX)
-- Sophisticated garbage collector identification and performance analysis  
+- Sophisticated garbage collector identification and performance analysis
 - Comprehensive flag extraction with proper module system access
 
 ### 👩‍💻 **Developer Experience**
+
 - Maven reactor builds for efficient development workflow
 - Centralized dependency management via Bill of Materials (BOM)
 - PORT environment variable support across all implementations
@@ -316,7 +315,7 @@ The project demonstrates sophisticated Maven practices:
 
 - **🏠 Parent POM**: Coordinates all modules with Maven 3.9.1+ enforcement
 - **📋 BOM Module**: Centralizes dependency versions and plugin configurations (Java 25)
-- **⚙️ Reactor Builds**: Ensures proper dependency resolution across modules  
+- **⚙️ Reactor Builds**: Ensures proper dependency resolution across modules
 - **🎯 Focused Modules**: Each framework optimized for its specific use case
 - **🔄 Plugin Management**: Consistent build lifecycle across all modules
 - **🐳 Jib Integration**: Unified container image building across all implementations
@@ -334,6 +333,7 @@ The project demonstrates sophisticated Maven practices:
 ## 🤝 Contributing
 
 This project serves as a comprehensive reference for:
+
 - Modern Java development practices (Java 25 features)
 - Maven multi-module project organization and BOM patterns
 - JVM introspection and performance analysis techniques
@@ -344,9 +344,8 @@ This project serves as a comprehensive reference for:
 
 ## 📚 Related Documentation
 
-- [STANDARDIZATION.md](STANDARDIZATION.md) - Detailed endpoint and port standardization documentation
 - [e2e-tests/README.md](e2e-tests/README.md) - E2E testing guide and implementation details
 
 ## 📄 License
 
-This project is available under standard open source licensing terms. See the project repository for specific licensing details.
+This project is available under MIT open source licensing terms. See the project repository for specific licensing details.
